--- a/app/views/stations/_form.html.erb
+++ b/app/views/stations/_form.html.erb
@@ -5,5 +5,12 @@
       <%= f.label :name %>
       <%= f.text_field :name %>
     </div>
+    <div class="form-group">
+      <%= hidden_field_tag "station[line_ids][]", nil %>
+      <% Line.all.each do |line| %>
+        <%= check_box_tag "station[line_ids][]", line.id, @station.line_ids.include?(line.id), id: dom_id(line) %>
+        <%= label_tag dom_id(line), line.name %><br>
+      <% end %>
+    </div>
     <%= f.submit(:class => "btn btn-primary") %>
   <% end %>
