--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "Stations", stations_path %></li>
         <li><%= link_to "Lines", lines_path %></li>
+        <li><%= link_to "Buses", buses_path %></li>
         <li><%= link_to "Stops", stops_path %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
