--- a/app/views/lines/show.html.erb
+++ b/app/views/lines/show.html.erb
@@ -16,6 +16,19 @@
     </div>
   </div>
 
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Buses</h3>
+    </div>
+    <div class="panel-body">
+      <ul>
+        <% @line.buses.each do |bus| %>
+          <li><%= link_to "#{bus.number}", bus_path(bus) %></li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+
   <p><%= link_to "Update", edit_line_path(@line) %></p>
   <p><%= link_to "Delete", line_path(@line),
             :data => {:confirm => "You sure?", :method => "delete"} %></p>
