--- a/app/views/lines/show.html.erb
+++ b/app/views/lines/show.html.erb
@@ -30,9 +30,14 @@
   </div>
 
   <div id="alchemy" class="alchemy"></div>
+
   <script type="text/javascript">
-    var some_data = <%= @line_data.html_safe %>;
-    alchemy.begin({"dataSource": some_data})
+    var config = {
+      "dataSource": <%= @line_data.html_safe %>,
+      "graphHeight": function() { return 250 },
+      "graphWidth": function() { return 250 },
+    };
+    alchemy.begin(config)
   </script>
 
   <p><%= link_to "Update", edit_line_path(@line) %></p>
